--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href=""><i class="fas fa-paw"></i> tindog</a>
+        <a class="navbar-brand" href=""><i class="fas fa-paw"></i> TinDog</a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
